--- a/.github/workflows/pull-snapshot.yml
+++ b/.github/workflows/pull-snapshot.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: sudo apt-get install -y curl htmlq
+        run: sudo apt-get install -y curl && snap install htmlq
 
       - name: Fetch ETLegacy webpage
         run: curl -s https://www.etlegacy.com/workflow-files > page.html
