--- a/.github/workflows/pull-snapshot.yml
+++ b/.github/workflows/pull-snapshot.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 0 * * *'  # Runs every day at midnight
   workflow_dispatch:      # Allows manual triggering
 
+permissions:
+  contents: write         # Grants permission to push changes
+
 jobs:
   check-build:
     runs-on: ubuntu-latest
@@ -25,7 +28,7 @@ jobs:
           # Extract the x86_64 .tar.gz link using htmlq
           FILE_URL=$(cat page.html | htmlq --attribute href a | grep 'x86_64.tar.gz' | head -n 1)
           echo "File URL: $FILE_URL"
-          echo "::set-output name=file_url::$FILE_URL"
+          echo "file_url=$FILE_URL" >> $GITHUB_OUTPUT
 
       - name: Extract build version and file name
         id: extract_version
@@ -35,8 +38,8 @@ jobs:
           VERSION=$(echo $FILE_NAME | sed 's/.*-\(.*\)-x86_64.tar.gz/\1/')
           echo "File name: $FILE_NAME"
           echo "Version: $VERSION"
-          echo "::set-output name=file_name::$FILE_NAME"
-          echo "::set-output name=version::$VERSION"
+          echo "file_name=$FILE_NAME" >> $GITHUB_OUTPUT
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Check if build already exists
         id: check_existing
@@ -44,11 +47,10 @@ jobs:
           FILE_NAME="${{ steps.extract_version.outputs.file_name }}"
           if [ -f "./$FILE_NAME" ]; then
             echo "Build already exists, skipping."
-            echo "::set-output name=exists::true"
+            echo "exists=true" >> $GITHUB_OUTPUT
           else
             echo "Build does not exist, downloading."
-            echo "::set-output name=exists::false"
-          fi
+            echo "exists=false" >> $GITHUB_OUTPUT
 
       - name: Download new build
         if: steps.check_existing.outputs.exists == 'false'
