--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -244,84 +244,134 @@ jobs:
             build/legacy/tvgame*.dll
           if-no-files-found: error
 
-  android-mod:
+  # android-mod:
+  #   runs-on: ubuntu-20.04
+  #   needs: get_commit_hash
+  #   env:
+  #     SIGNING_KEY_ALIAS: "test_alias"
+  #     SIGNING_KEY_PASSWORD: "test_key_password"
+  #     SIGNING_STORE_PASSWORD: "test_store_password"
+  #     CI_ETL_DESCRIBE: ${{needs.get_commit_hash.outputs.describe}}
+  #     CI_ETL_TAG: ${{github.event.inputs.git_tag}}
+  #   container:
+  #     image: etlegacy/android-build
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #       with:
+  #         repository: etlegacy/etlegacy
+  #         submodules: true
+  #         ref: ${{ needs.get_commit_hash.outputs.commit_hash }}
+
+  #     - name: Setup JDK
+  #       uses: actions/setup-java@v4
+  #       with:
+  #         distribution: 'temurin'
+  #         java-version: '17'
+
+  #     - name: Build JoyStick Dependency
+  #       working-directory: ./app/libs/joystick
+  #       run: |
+  #         ./gradlew clean               --stacktrace --info
+  #         ./gradlew assembleRelease     --stacktrace --info
+  #         ./gradlew publishToMavenLocal --stacktrace --info
+
+  #     - name: Upload JoyStick Dependency Artifacts
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: android-joystick-packages
+  #         path: '/root/.m2/repository/com/etlegacy/android/joystick/'
+  #         if-no-files-found: error
+
+  #     - name: Build Release
+  #       run: |
+  #         git config --global --add safe.directory "$GITHUB_WORKSPACE"
+  #         ./gradlew clean assembleRelease --stacktrace --info
+  #         ls -R
+
+  #     - name: Prepare artifacts
+  #       run: |
+  #         mv ./app/build/intermediates/merged_native_libs/*/out/lib/arm64-v8a/libcgame*.so .
+  #         mv ./app/build/intermediates/merged_native_libs/*/out/lib/arm64-v8a/libui*.so .
+  #         mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86/libcgame*.so .
+  #         mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86/libui*.so .
+  #         mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86_64/libcgame*.so .
+  #         mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86_64/libui*.so .
+  #         ls -ltrah
+
+  #     - name: Upload arm64-v8a
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: android-arm64-mod
+  #         path: |
+  #           libcgame*arm64*.so
+  #           libui*arm64*.so
+  #         if-no-files-found: error
+
+  #     - name: Upload x86
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: android-x86-mod
+  #         path: |
+  #           libcgame*i386.so
+  #           libui*i386.so
+  #         if-no-files-found: error
+
+  #     - name: Upload x86_64
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: android-x86_64-mod
+  #         path: |
+  #           libcgame*x86_64.so
+  #           libui*x86_64.so
+  #         if-no-files-found: error
+
+  mod-merger:
     runs-on: ubuntu-20.04
-    needs: get_commit_hash
-    env:
-      SIGNING_KEY_ALIAS: "test_alias"
-      SIGNING_KEY_PASSWORD: "test_key_password"
-      SIGNING_STORE_PASSWORD: "test_store_password"
-      CI_ETL_DESCRIBE: ${{needs.get_commit_hash.outputs.describe}}
-      CI_ETL_TAG: ${{github.event.inputs.git_tag}}
-    container:
-      image: etlegacy/android-build
+    needs: [ get_commit_hash, lnx64-mod, lnx32-mod, osx-mod, win-mod, win64-mod, lnx-aarch64-mod] #, android-mod ]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          repository: etlegacy/etlegacy
-          submodules: true
-          ref: ${{ needs.get_commit_hash.outputs.commit_hash }}
 
-      - name: Setup JDK
-        uses: actions/setup-java@v4
+      - uses: actions/download-artifact@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          name: incomplete-mod-pk3
 
-      - name: Build JoyStick Dependency
-        working-directory: ./app/libs/joystick
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: '*-mod'
+          path: platforms
+          merge-multiple: true
+
+      - name: Create supported platform manifest
+        shell: bash
         run: |
-          ./gradlew clean               --stacktrace --info
-          ./gradlew assembleRelease     --stacktrace --info
-          ./gradlew publishToMavenLocal --stacktrace --info
+          echo "win_x86 win_x86_64 lnx_x86 lnx_x86_64 macos_x86_64 macos_aarch64 lnx_armv8_64 android_aarch64" > platforms.manifest
 
-      - name: Upload JoyStick Dependency Artifacts
-        uses: actions/upload-artifact@v4
+      - name: Merge mod files
+        shell: bash
+        run: |
+          zip -rvj -MM legacy_*.pk3 platforms.manifest platforms/cgame* platforms/ui* platforms/libcgame* platforms/libui*
+
+      - name: Create mod zip
+        shell: bash
+        run: |
+          zip -rvj -MM etlegacy-mod-${{needs.get_commit_hash.outputs.describe}}.zip legacy_*.pk3 platforms/qagame* platforms/tvgame*
+
+      - name: Remove old artifacts
+        uses: geekyeggo/delete-artifact@v4
         with:
-          name: android-joystick-packages
-          path: '/root/.m2/repository/com/etlegacy/android/joystick/'
+          failOnError: false
+          name: |
+            incomplete-mod-pk3
+            *-mod
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: All-mods
+          path: legacy_*.pk3
           if-no-files-found: error
 
-      - name: Build Release
-        run: |
-          git config --global --add safe.directory "$GITHUB_WORKSPACE"
-          ./gradlew clean assembleRelease --stacktrace --info
-          ls -R
-
-      - name: Prepare artifacts
-        run: |
-          mv ./app/build/intermediates/merged_native_libs/*/out/lib/arm64-v8a/libcgame*.so .
-          mv ./app/build/intermediates/merged_native_libs/*/out/lib/arm64-v8a/libui*.so .
-          mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86/libcgame*.so .
-          mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86/libui*.so .
-          mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86_64/libcgame*.so .
-          mv ./app/build/intermediates/merged_native_libs/*/out/lib/x86_64/libui*.so .
-          ls -ltrah
-
-      - name: Upload arm64-v8a
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
-          name: android-arm64-mod
-          path: |
-            libcgame*arm64*.so
-            libui*arm64*.so
-          if-no-files-found: error
-
-      - name: Upload x86
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-x86-mod
-          path: |
-            libcgame*i386.so
-            libui*i386.so
-          if-no-files-found: error
-
-      - name: Upload x86_64
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-x86_64-mod
-          path: |
-            libcgame*x86_64.so
-            libui*x86_64.so
+          name: mod-zip
+          path: etlegacy-mod-*.zip
           if-no-files-found: error
