--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -344,12 +344,12 @@ jobs:
       - name: Create supported platform manifest
         shell: bash
         run: |
-          echo "win_x86 win_x86_64 lnx_x86 lnx_x86_64 macos_x86_64 macos_aarch64 lnx_armv8_64 android_aarch64" > platforms.manifest
+          echo "win_x86 win_x86_64 lnx_x86 lnx_x86_64 macos_x86_64 macos_aarch64 lnx_armv8_64" > platforms.manifest
 
       - name: Merge mod files
         shell: bash
         run: |
-          zip -rvj -MM legacy_*.pk3 platforms.manifest platforms/cgame* platforms/ui* platforms/libcgame* platforms/libui*
+          zip -rvj -MM legacy_*.pk3 platforms.manifest platforms/cgame* platforms/ui*
 
       - name: Create mod zip
         shell: bash
